--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="/main.js"></script>
     <script type="module" src="/src/components/header/header.js"></script>
-    <title>칼리 |</title>
+    <title>칼리</title>
   </head>
   <body>
     <header>
