--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -13,7 +13,7 @@
     <script type="module" src="/src/components/header/header.js"></script>
     <script type="module" src="/src/components/footer/footer.js"></script>
     <script type="module" src="/src/pages/cart/cart.js"></script>
-    <title>칼리 |</title>
+    <title>칼리</title>
   </head>
   <body>
     <header>
