--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -12,7 +12,7 @@
     />
     <script type="module" src="/src/pages/login/login.js"></script>
     <script type="module" src="/src/components/header/header.js"></script>
-    <title>칼리 |</title>
+    <title>칼리</title>
   </head>
 
   <body>
