--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -16,7 +16,7 @@
       defer
       src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"
     ></script>
-    <title>칼리 |</title>
+    <title>칼리</title>
   </head>
 
   <body>
