--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="logo_switch">
               <h1 class="logo">
                 <a href="%BASE_URL%">
-                  <img src="/public/logo.png" alt="마켓컬리 홈으로" />
+                  <img src="/public/logo.png" alt="마켓칼리 홈으로" />
                 </a>
               </h1>
               <div class="switch">
@@ -378,7 +378,7 @@
                 <figure>
                   <img
                     src="/src/assets/images/banner01.png"
-                    alt="배너 : 부드러운 달콤함 컬리 과일 가게"
+                    alt="배너 : 부드러운 달콤함 칼리 과일 가게"
                   />
                 </figure>
               </a>
@@ -398,7 +398,7 @@
                 <figure>
                   <img
                     src="/src/assets/images/banner03.png"
-                    alt="배너 : 컬리 퍼플 위크"
+                    alt="배너 : 칼리 퍼플 위크"
                   />
                 </figure>
               </a>
@@ -418,7 +418,7 @@
                 <figure>
                   <img
                     src="/src/assets/images/banner05.png"
-                    alt="배너 : 컬리 장보기의 특권 이 주의 특가 한 눈에 보기"
+                    alt="배너 : 칼리 장보기의 특권 이 주의 특가 한 눈에 보기"
                   />
                 </figure>
               </a>
@@ -585,7 +585,7 @@
             </ul>
             <address class="footer_address">
               <ul>
-                <li>법인명 (상호) : 주식회사 컬리</li>
+                <li>법인명 (상호) : 주식회사 칼리</li>
                 <li>사업자등록번호 : 261-81-23567</li>
                 <li><a href="#">사업자정보 확인</a></li>
                 <li>통신판매업 : 제 2018-서울강남-01646 호</li>
@@ -696,12 +696,12 @@
       <div class="footer_copyright">
         <div class="footer_text">
           <p>
-            마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가
+            마켓칼리에서 판매되는 상품 중에는 마켓칼리에 입점한 개별 판매자가
             판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
           </p>
           <p>
-            마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서
-            통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질,
+            마켓플레이스(오픈마켓) 상품의 경우 칼리는 통신판매중개자로서
+            통신판매의 당사자가 아닙니다. 칼리는 해당 상품의 주문, 품질,
             교환/환불 등 의무와 책임을 부담하지 않습니다.
           </p>
         </div>
