--- a/src/pages/product_detail/index.html
+++ b/src/pages/product_detail/index.html
@@ -56,7 +56,7 @@
             <div class="logo_switch">
               <h1 class="logo">
                 <a href="%BASE_URL%">
-                  <img src="/public/logo.png" alt="마켓컬리 홈으로" />
+                  <img src="/public/logo.png" alt="마켓칼리 홈으로" />
                 </a>
               </h1>
               <div class="switch">
@@ -490,7 +490,7 @@
               <h4>환경을 생각하는 지속 가능한 유통</h4>
               <p>
                 친환경 포장재부터 생산자가 상품에만 집중할 수 있는 직매입
-                유통구조까지, 지속 가능한 유통을 고민하며 컬리를 있게 하는 모든
+                유통구조까지, 지속 가능한 유통을 고민하며 칼리를 있게 하는 모든
                 환경(생산자,커뮤니티,직원)이 더 나아질 수 있도록 노력합니다.
               </p>
             </li>
@@ -612,7 +612,7 @@
               >상품에 대한 문의를 남기는 공간입니다. 해당 게시판의 성격과 다른
               글은 사전동의 없이 담당 게시판으로 이동될 수 있습니다.</small
             ><small
-              >배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이컬리 내
+              >배송관련, 주문(취소/교환/환불)관련 문의 및 요청사항은 마이칼리 내
               1:1 문의에 남겨주세요.</small
             >
             <a class="inquire_button" href="#">문의하기</a>
@@ -789,7 +789,7 @@
             </ul>
             <address class="footer_address">
               <ul>
-                <li>법인명 (상호) : 주식회사 컬리</li>
+                <li>법인명 (상호) : 주식회사 칼리</li>
                 <li>사업자등록번호 : 261-81-23567</li>
                 <li><a href="#">사업자정보 확인</a></li>
                 <li>통신판매업 : 제 2018-서울강남-01646 호</li>
@@ -900,12 +900,12 @@
       <div class="footer_copyright">
         <div class="footer_text">
           <p>
-            마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가
+            마켓칼리에서 판매되는 상품 중에는 마켓칼리에 입점한 개별 판매자가
             판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
           </p>
           <p>
-            마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서
-            통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질,
+            마켓플레이스(오픈마켓) 상품의 경우 칼리는 통신판매중개자로서
+            통신판매의 당사자가 아닙니다. 칼리는 해당 상품의 주문, 품질,
             교환/환불 등 의무와 책임을 부담하지 않습니다.
           </p>
         </div>
