--- a/src/pages/product_list/index.html
+++ b/src/pages/product_list/index.html
@@ -53,7 +53,7 @@
             <div class="logo_switch">
               <h1 class="logo">
                 <a href="%BASE_URL%">
-                  <img src="/public/logo.png" alt="마켓컬리 홈으로" />
+                  <img src="/public/logo.png" alt="마켓칼리 홈으로" />
                 </a>
               </h1>
               <div class="switch">
@@ -589,7 +589,7 @@
             </ul>
             <address class="footer_address">
               <ul>
-                <li>법인명 (상호) : 주식회사 컬리</li>
+                <li>법인명 (상호) : 주식회사 칼리</li>
                 <li>사업자등록번호 : 261-81-23567</li>
                 <li><a href="#">사업자정보 확인</a></li>
                 <li>통신판매업 : 제 2018-서울강남-01646 호</li>
@@ -700,12 +700,12 @@
       <div class="footer_copyright">
         <div class="footer_text">
           <p>
-            마켓컬리에서 판매되는 상품 중에는 마켓컬리에 입점한 개별 판매자가
+            마켓칼리에서 판매되는 상품 중에는 마켓칼리에 입점한 개별 판매자가
             판매하는 마켓플레이스(오픈마켓) 상품이 포함되어 있습니다.
           </p>
           <p>
-            마켓플레이스(오픈마켓) 상품의 경우 컬리는 통신판매중개자로서
-            통신판매의 당사자가 아닙니다. 컬리는 해당 상품의 주문, 품질,
+            마켓플레이스(오픈마켓) 상품의 경우 칼리는 통신판매중개자로서
+            통신판매의 당사자가 아닙니다. 칼리는 해당 상품의 주문, 품질,
             교환/환불 등 의무와 책임을 부담하지 않습니다.
           </p>
         </div>
